--- a/src/styles/base/_utils.scss
+++ b/src/styles/base/_utils.scss
@@ -1,6 +1,3 @@
-body.menu-open {
-    overflow: hidden;
-}
 
 .visually-hidden {
     position: absolute !important;
@@ -20,8 +17,8 @@ body.menu-open {
     position: fixed;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.25);
-    // backdrop-filter: blur(6px);
-    // -webkit-backdrop-filter: blur(6px);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
