style (content): new styles and paths for images and maps

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @use './base/typography';
 @use './base/icons';
 @use './base/utils';
+@use './base/images';
+@use './base/maps';
 
 @use './components/header';
 @use './components/intro';
