style (content): add section-title:before icons

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -74,3 +74,15 @@
         }
 
 }
+
+@mixin section-title {
+    content: "";
+    display: inline-block;
+    margin-right: var(--container-padding-x);
+    aspect-ratio: 1;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+
+    @include fluid-space(width, 45, 64);
+}
