--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,9 @@
 
 @use './components/header';
 @use './components/intro';
+@use './components/kimmeric';
+@use './components/spartok';
+@use './components/mitridat';
+@use './components/tibery';
+@use './components/late';
+@use './components/appendix';
