--- a/styles.css
+++ b/styles.css
@@ -631,10 +631,10 @@ h4 {
     background-image: url(./Icons/icon-Late-Rome-text.svg);
 } */
 
-.appendix__title::before {
+/* .appendix__title::before {
     background-image: url(./Icons/icon-appendix-text.svg);
     width: clamp(4rem, 7vw, 5.1rem);
-}
+} */
 
 .appendix__rulers {
     overflow-x: auto;
