style (footer): add new styles at footer

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -45,13 +45,14 @@
         &:hover {
             color: $hover-color;
             border-color: $hover-color;
-            
+            stroke: $hover-color;
         }
     }
 
     &:active {
         color: $hover-color;
         border-color: $hover-color;
+        
         
     }
 
