feat (UI/UX): add header-controller.js - initSmartHeader()

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -9,8 +9,16 @@
     z-index: 20;
     background: var(--color-light);
     height: var(--header-height);
-    box-shadow: 0 0 rem(24) var(--color-shadows);
+    box-shadow: 0 0 rem(18) var(--color-shadows);
     padding-inline: var(--container-padding-x);
+    transform: translateY(0);
+    transition: transform 0.5s ease;
+    will-change: transform;
+
+    &.is-hidden {
+        transform: translateY(-100%);
+        box-shadow: 0 0 rem(0) var(--color-shadows);
+    }
 
     &__container {
         display: flex;
