--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -41,3 +41,9 @@ $border-width: 1;
 
 $fluid-min-viewport: 360;
 $fluid-max-viewport: 1400;
+
+/* ===== MEDIA QUERIES ===== */
+
+$tablet: 700;
+$laptop: 900;
+$desktop: 1000;
