--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -15,8 +15,16 @@ h1, h2, h3 {
 .title--h2 {
     display: flex;
     align-items: center;
+
     @include fluid-text(16, 22);
+    
     @include fluid-space(margin-top, 48, 96);
+    
+    @include fluid-space(padding-inline, 1, 120);
+
+    @include adaptive(laptop) {
+        padding-inline: 0;
+    }
     
 }
 
